--- a/image_processing/Cargo.toml
+++ b/image_processing/Cargo.toml
@@ -15,6 +15,7 @@ rstar = "0.11"
 log = "0.4"
 #pretty_env_logger = "0.5.0"
 #tokio = { version = "1.31", features = ["full"] }
+memmap2 = "0.7"
 
 [lib]
 name = "image_processing"
