--- a/tg_controller/Cargo.toml
+++ b/tg_controller/Cargo.toml
@@ -15,4 +15,6 @@ teloxide = { version = "0.12", features = ["macros"] }
 log = "0.4"
 pretty_env_logger = "0.5.0"
 tokio = { version = "1.31", features = ["full"] }
+rayon = "1.7"
+
 image_processing = { path="../image_processing" }
