--- a/tg_controller/Cargo.toml
+++ b/tg_controller/Cargo.toml
@@ -16,5 +16,6 @@ log = "0.4"
 pretty_env_logger = "0.5.0"
 tokio = { version = "1.31", features = ["full"] }
 rayon = "1.7"
+tokio-rayon = "2.1"
 
 image_processing = { path="../image_processing" }
